<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71D0FF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ClicksCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_of_clicks"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ClicksButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_me"
                app:backgroundTint="#A2D471" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:id="@+id/TextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_message"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/NewTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_new_message"
                android:inputType="textPersonName"/>

            <Button
                android:id="@+id/SetMessageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_message"
                app:backgroundTint="#FFD071" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/ShowToastButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_toast"
                app:backgroundTint="#B38DFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/CloseAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_app"
                app:backgroundTint="#F17171" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>